SET(TARGET_SRC
	main.cc
)

INCLUDE_DIRECTORIES(
	${bjdwp_SOURCE_DIR}/tools
)

INCLUDE_DIRECTORIES(${BARRY_INCLUDE_DIRS})
LINK_DIRECTORIES(${BARRY_LIBRARY_DIRS})
LINK_LIBRARIES(${BARRY_LIBRARIES})

ADD_EXECUTABLE(${PROG_BJDWP_NAME} ${TARGET_SRC})

TARGET_LINK_LIBRARIES(${PROG_BJDWP_NAME} ${LIB_JDWP_NAME} ${LIB_UTIL_NAME})

