SET(TARGET_SRC
	parser.cc
	codinfo.cc
)

INCLUDE_DIRECTORIES(
	${bjdwp_SOURCE_DIR}/utils
	${bjdwp_SOURCE_DIR}/include/barry/jdwp
)

ADD_LIBRARY(${LIB_UTIL_NAME} SHARED ${TARGET_SRC})



SET(PROG_TSTPARSER_NAME tstparser)

SET(TARGET_SRC
	main.cc
)

INCLUDE_DIRECTORIES(
	${bjdwp_SOURCE_DIR}/tools
)

ADD_EXECUTABLE(${PROG_TSTPARSER_NAME} ${TARGET_SRC})

TARGET_LINK_LIBRARIES(${PROG_TSTPARSER_NAME} ${LIB_UTIL_NAME})

