EXTRA_DIST = \
	MainButtons.xcf \
	Makefile.am \
	README \
	apploader-focus.png \
	apploader-normal.png \
	apploader-pushed.png \
	background.png \
	background.xcf \
	backuprestore-focus.png \
	backuprestore-normal.png \
	backuprestore-pushed.png \
	barry_logo_icon.xpm \
	browsedatabases-focus.png \
	browsedatabases-normal.png \
	browsedatabases-pushed.png \
	deviceswitch-focus.png \
	deviceswitch-normal.png \
	deviceswitch-pushed.png \
	logo_NetDirect.xpm \
	media-focus.png \
	media-normal.png \
	media-pushed.png \
	misc-focus.png \
	misc-normal.png \
	misc-pushed.png \
	modem-focus.png \
	modem-normal.png \
	modem-pushed.png \
	sync-focus.png \
	sync-normal.png \
	sync-pushed.png

