dist_image_DATA = \
	background.png \
	scanning.png \
	apploader-focus.png \
	apploader-normal.png \
	apploader-pushed.png \
	backuprestore-focus.png \
	backuprestore-normal.png \
	backuprestore-pushed.png \
	browsedatabases-focus.png \
	browsedatabases-normal.png \
	browsedatabases-pushed.png \
	migratedevice-focus.png \
	migratedevice-normal.png \
	migratedevice-pushed.png \
	media-focus.png \
	media-normal.png \
	media-pushed.png \
	misc-focus.png \
	misc-normal.png \
	misc-pushed.png \
	modem-focus.png \
	modem-normal.png \
	modem-pushed.png \
	sync-focus.png \
	sync-normal.png \
	sync-pushed.png

EXTRA_DIST = \
	MainButtons.xcf \
	scanning.xcf \
	Makefile.am \
	README \
	background.xcf \
	barry_logo_icon.xpm \
	logo_NetDirect.xpm

